kyy-k8s-dev/app/php/php-kaoyayacom/php-kaoyayacom-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: php-kaoyayacom
  name: php-kaoyayacom
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: php-kaoyayacom
    spec:
      imagePullSecrets:
        - name: beijing
      volumes:
        - name: php-code
          hostPath:
            path: /Users/sunrich/work/web/kaoyayacn/
      containers:
        - env:
            - name: DOCUMENTROOT
              value: /var/www/html/kaoyayacn/
          image: registry.cn-beijing.aliyuncs.com/kaoyaya/kaoyaya:staging
          name: php-kaoyayacom
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html/kaoyayacn/
              name: php-code
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
